[package]
name = "reasonable_envsubst"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "*"
# v_utils = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
anyhow = "*"
clap = { version = "4.5.4", features = ["derive"] }
clap-stdin = "0.4.0"

[dev-dependencies]
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]
